--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,6 @@
 /*  your css code here. If applicable */
+a {
+        color: blue;
+        text-decoration: underline;
+        cursor: pointer;
+      }
